# support-agent-reimagined

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  PLACEMENT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: llm_profiles.yaml
docs/: AGENT_CONTRACTS.md  ARCHITECTURE.md  EVALUATION.md  README_IMPROVEMENTS.md  REQUEST_LIFECYCLE_EXAMPLE.md  SELF_IMPROVEMENT_GUARDRAILS.md  SUPPORTED_SCENARIOS.md
knowledge/: hosting_playbooks.yaml  playbook_loader.py
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: finetune_prep.py  prometheus.yml
src/afriagent/: __init__.py  main.py
src/afriagent/adapters/: __init__.py
src/afriagent/api/: __init__.py
src/afriagent/brain/: __init__.py  llm.py  validator.py
src/afriagent/config/: __init__.py  logging.py
src/afriagent/coordinator/: __init__.py  dispatcher.py  model.py  prompts.py  replanner.py
src/afriagent/knowledge/: __init__.py
src/afriagent/learning/: __init__.py
src/afriagent/memory/: __init__.py
src/afriagent/models/: __init__.py
src/afriagent/observability/: __init__.py
src/afriagent/perceiver/: __init__.py  language.py
src/afriagent/plugins/: __init__.py
src/afriagent/self_model/: __init__.py  state.py  updater.py
src/afriagent/tools/: __init__.py  dns_check.py  mpesa.py  registry.py  whmcs.py
src/afriagent/transmitter/: __init__.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py  test_pipeline.py
tests/unit/: test_brain.py  test_coordinator.py  test_language_detection.py  test_learning_loop.py  test_llm.py  test_memory.py  test_models.py  test_perceiver.py  test_proactive_engine.py  test_self_model.py  test_tool_registry.py  test_transmitter.py  test_validator.py
